objects/JunoDoc__Juno_Doc_Trigger_Log__c/JunoDoc__Juno_Doc_Trigger_Log__c.object-meta.xml
<CustomObject>
    <label>Juno Doc Trigger Log</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Juno Doc Trigger Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Juno Doc Trigger Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>