objects/JunoDoc__Juno_Doc_Trigger_Log__c/fields/JunoDoc__Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Executed_Date__c</fullName>
    <label>Executed Date</label>
    <type>DateTime</type>
</CustomField>