objects/JunoDoc__Juno_Doc_Trigger_Log__c/fields/JunoDoc__Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Record_Ids__c</fullName>
    <label>Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>