objects/JunoDoc__Juno_Doc_Trigger_Log__c/fields/JunoDoc__Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>